[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "massa_army_bot"
authors = [
    {name = "half-red", email = "half-red@half-red.net"},
]
maintainers = [
    {name = "half-red", email = "half-red@half-red.net"},
]
description = "Massa Army helper bot"
requires-python = ">=3.12"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = []
dynamic = ["version"]

[project.scripts]
massa_army_bot = "massa_army_bot.bot:main"

[project.urls]
HomePage = "https://github.com/half-red/massa_army_bot"
Repository = "https://github.com/half-red/massa_army_bot.git"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
version_file = "src/massa_army_bot/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = "src"
testpaths = [ "tests" ]

[tool.autopep8]
max_line_length = 80
ignore = ["E302", "E501", "E701", "W503"]
in-place = true
recursive = true

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
reportMissingImports = true
reportMissingTypeArgument = true
